# AirQualityProcessor

./: README.md
exportToHTML/: main.cpp.html
final_project/: AirQuality.cpp  AirQuality.h  CMakeLists.txt  Date.cpp  Time.cpp  Time.h  main.cpp
final_test/: AirQuality.cpp  AirQuality.h  AirQualityTest.cpp  CMakeLists.txt  Date.cpp  Date.h  Time.cpp  Time.h  dateTest.cpp  main.cpp  timeTest.cpp
